<resources>
    <string name="app_name">EvaHI</string>
    <string name="app_name_setting">Setting</string>
    <string name="app_name_about">About</string>
    <string name="app_name_scan">Scan QR code</string>
    <string name="app_name_profiles">Profiles</string>

    <string name="app_a_main_settings">Set setting</string>
    <string name="app_a_main_loading">Loading, please wait…</string>

    <string name="app_a_settings_s_title_group">Server settings</string>
    <string name="app_a_settings_s_title_scan"><u>Scan QR code</u></string>
    <string name="app_a_settings_s_title_scheme">use https</string>
    <string name="app_a_settings_s_title_address">Server:</string>
    <string name="app_a_settings_s_title_port">Port:</string>
    <string name="app_a_settings_s_title_page">Page:</string>
    <string name="app_a_settings_s_title_landscape_page">Landscape page:</string>
    <string name="app_a_settings_u_title_group">Authentication</string>
    <string name="app_a_settings_u_title_name">User:</string>
    <string name="app_a_settings_u_title_password">Password:</string>
    <string name="app_a_settings_u_title_save">Save</string>
    <string name="app_a_settings_u_title_cancel">Cancel</string>
    <string name="app_a_settings_u_title_yes">Yes</string>
    <string name="app_a_settings_u_hint_password">Password</string>

    <string name="app_a_settings_exception_invalid_code">Invalid code</string>
    <string name="app_a_settings_exception_invalid_scheme">Invalid protocol</string>
    <string name="app_a_settings_exception_invalid_address">Invalid address</string>
    <string name="app_a_settings_exception_invalid_port">Invalid port</string>
    <string name="app_a_settings_exception_invalid_page">Invalid page</string>
    <string name="app_a_settings_exception_invalid_landscape_page">Invalid landscape page</string>
    <string name="app_a_settings_exception_invalid_name">Invalid user name</string>
    <string name="app_a_settings_exception_invalid_password">Invalid password</string>
    <string name="app_a_settings_exception_qr_io_error">QR IO ERROR</string>
    <string name="app_a_settings_exception_empty_field">field cannot be empty</string>



    <string name="app_a_about_line_name" formatted="false">EvaHI build %d</string>
    <string name="app_a_about_line_copyright" formatted="false">(©)%d Altertech Group</string>
    <string name="app_a_about_line_link" formatted="false">https://www.altertech.com</string>
    <string name="app_a_about_line_license" formatted="false">Apache License 2.0</string>
    <string name="app_a_about_line_web_ui" formatted="false">Web UI serial # %s</string>

    <string name="app_exception_invalid_url">Invalid url</string>
    <string name="app_exception_no_connection_to_the_server">Unable to connect to server</string>
    <string name="app_exception_connection_refused">Connection refused</string>
    <string name="app_exception_file_not_found">File not found</string>
    <string name="app_exception_file_empty">File empty</string>
    <string name="app_exception_parse_error">Parse error</string>
    <string name="app_exception_parse_error_invalid_serial">Invalid serial</string>
    <string name="app_exception_parse_error_invalid_index_page">Invalid index page</string>
    <string name="app_exception_error">Internal error…</string>
    <string name="app_exception_ssl_error">SSL error…</string>
    <string name="app_exception_handshake">Protocol error</string>

    <string name="app_exception_no_settings">Server config not set</string>

    <string name="app_menu_item_name_home">Home</string>
    <string name="app_menu_item_name_settings">Settings</string>
    <string name="app_menu_item_name_reload">Reload</string>
    <string name="app_menu_item_name_about">About</string>
    <string name="app_menu_item_name_exit">Exit</string>
    <string name="app_menu_item_name_qr">QR</string>
    <string name="app_menu_item_name_profiles">Profiles</string>

    <string name="app_dialog_title_execution">Execution…</string>
    <string name="app_dialog_title_delete_profiles">Delete selected profiles?</string>
    <string name="app_remote_wait">Please wait…</string>


    <string name="app_profile_unknown">Unknown</string>

</resources>
