<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_1"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/space_15dp">

    <LinearLayout
        android:id="@+id/dialog_container_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_15dp"
        android:paddingTop="@dimen/space_15dp"
        android:paddingEnd="@dimen/space_15dp"
        android:paddingBottom="@dimen/space_20dp">


        <EditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_30dp"
            android:autofillHints="@string/app_name"
            android:background="@drawable/selector_gray_to_light_blue_bottom_edit_text_view"
            android:inputType="text"
            android:textColor="@color/app_black"
            android:textColorHint="@color/app_gray_1"
            android:textCursorDrawable="@drawable/drawable_cursor_lighy_blue"
            android:textSize="@dimen/text_views_text_size_14sp"
            tools:ignore="LabelFor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/a_cancel"
                android:layout_width="100dp"
                android:layout_height="@dimen/space_35dp"
                android:background="@drawable/drawable_button_2"
                android:text="@string/app_a_settings_u_title_cancel"
                android:textColor="@drawable/selector_change_white_color_to_white_50_color" />

            <Space
                android:layout_width="@dimen/space_20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/a_save"
                android:layout_width="100dp"
                android:layout_height="@dimen/space_35dp"
                android:background="@drawable/drawable_button"
                android:text="@string/app_a_settings_u_title_save"
                android:textColor="@drawable/selector_change_white_color_to_white_50_color" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>