<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_1"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/space_15dp">

    <LinearLayout
        android:id="@+id/dialog_container_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_20dp"
        android:paddingEnd="@dimen/space_15dp"
        android:paddingStart="@dimen/space_15dp"
        android:paddingTop="@dimen/space_15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            app:counterMaxLength="16"
            app:counterTextAppearance="@style/CustomCounterStyle"
            app:errorEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/app_gray_2">
            <!---->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_30dp"
                android:background="@drawable/selector_gray_to_light_blue_bottom_edit_text_view"
                android:hint="@string/app_a_settings_u_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/app_black"
                android:textColorHint="@color/app_gray_1"
                android:textCursorDrawable="@drawable/drawable_cursor_lighy_blue"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/a_cancel"
                android:layout_width="100dp"
                android:layout_height="@dimen/space_35dp"
                android:background="@drawable/drawable_button_2"
                android:text="@string/app_a_settings_u_title_cancel"
                android:textColor="@drawable/selector_change_white_color_to_white_50_color" />

            <Space
                android:layout_width="@dimen/space_20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/a_save"
                android:layout_width="100dp"
                android:layout_height="@dimen/space_35dp"
                android:background="@drawable/drawable_button"
                android:text="@string/app_a_settings_u_title_save"
                android:textColor="@drawable/selector_change_white_color_to_white_50_color" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>